おみくじ改

--- a/JavaScript/grammar/JavaScriptBasics/index.html
+++ b/JavaScript/grammar/JavaScriptBasics/index.html
@@ -5,7 +5,12 @@
 		<title>JavaScript Basics</title>
 	</head>
 	<body>
+		<button>Run</button>
 
+		<ul>
+			<li>item 0</li>
+			<li>item 1</li>
+		</ul>
 		<script src="js/main.js"></script>
 	</body>
 </html>
