スライドショー改造

--- a/JavaScript/MySlideshow/index.html
+++ b/JavaScript/MySlideshow/index.html
@@ -7,15 +7,18 @@
 	</head>
 	<body>
 		<main>
-			<img id="main">
+			<ul class="imgNav">
+				<img id="main">
+				<nav>
+					<ul>
+						<li id="prev">&lt; PREV</li>
+						<li id="play">PLAY</li>
+						<li id="next">NEXT &gt;</li>
+					</ul>
+				</nav>
+			</ul>
 
-			<nav>
-				<ul>
-					<li id="play">Play</li>
-					<li id="prev">&lt;</li>
-					<li id="next">&gt;</li>
-				</ul>
-			</nav>
+			<ul class="thumbnailTitle">COLOR</ul>
 
 			<ul class="thumbnails">
 				<!-- <li class="current"><img src="img/pic00.png"></li>
